--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 @layer components {
-	.select {
-		@apply px-1 py-2 mr-3 outline-none bg-gray-300 rounded-sm hover:bg-gray-400;
-	}
+  .select {
+    @apply px-1 py-2 mr-3 outline-none bg-gray-300 rounded-sm hover:bg-gray-400 focus:ring-blue-600 focus:ring-1;
+  }
 
-	.option {
-		@apply bg-gray-200 outline-none my-6 border-none py-3;
-	}
+  .option {
+    @apply bg-gray-200 outline-none my-6 border-none py-3;
+  }
 }
